objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <label>Order No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>