objects/Purchase_Order__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
            <value>
                <fullName>Level 7</fullName>
            </value>
            <value>
                <fullName>Level 8</fullName>
            </value>
            <value>
                <fullName>Level 9</fullName>
            </value>
            <value>
                <fullName>Level 10</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>