objects/Purchase_Order__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>