objects/Purchase_Order__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>