objects/Purchase_Order__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>