objects/Purchase_Order__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>