objects/Purchase_Order__c/fields/Buy_from_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Blocked__c</fullName>
    <formula>Buy_from_Vendor__r.Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-from Blocked</label>
    <type>Checkbox</type>
</CustomField>