objects/Purchase_Order__c/fields/Buy_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Buy-from Vendor)</relationshipLabel>
    <relationshipName>Purchase_Orders_BF</relationshipName>
    <type>Lookup</type>
</CustomField>