objects/Purchase_Order__c/fields/Confirmed_with_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_with_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed with Vendor</label>
    <type>Checkbox</type>
</CustomField>