objects/Purchase_Order__c/fields/Contact_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_No__c</fullName>
    <label>Contact Phone No.</label>
    <type>Phone</type>
</CustomField>