objects/Purchase_Order__c/fields/Cost_Replace__c.field-meta.xml
<CustomField>
    <fullName>Cost_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Replace</label>
    <type>Checkbox</type>
</CustomField>