objects/Purchase_Order__c/fields/Coupa_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Id__c</fullName>
    <externalId>true</externalId>
    <label>Coupa Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>