objects/Purchase_Order__c/fields/Coupa_ReSync__c.field-meta.xml
<CustomField>
    <fullName>Coupa_ReSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupa ReSync</label>
    <type>Checkbox</type>
</CustomField>