objects/Purchase_Order__c/fields/Coupa_Status__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Status__c</fullName>
    <label>Coupa Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>