objects/Purchase_Order__c/fields/Create_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Create_User_Name__c</fullName>
    <formula>CreatedBy.FirstName + ' ' + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create User Name</label>
    <type>Text</type>
</CustomField>