objects/Purchase_Order__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders_del</relationshipName>
    <type>Lookup</type>
</CustomField>