objects/Purchase_Order__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Partially Received</fullName>
            </value>
            <value>
                <fullName>Fully Received</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>All Received</fullName>
                <isActive>false</isActive>
                <label>All Received</label>
            </value>
            <value>
                <fullName>Back Order</fullName>
                <isActive>false</isActive>
                <label>Back Order</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Receipt Created</fullName>
                <isActive>false</isActive>
                <label>Receipt Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>