objects/Purchase_Order__c/fields/Estimated_Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Freight_Amount__c</fullName>
    <label>Estimated Freight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>