objects/Purchase_Order__c/fields/Inter_co_Account__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inter-co Account</label>
    <type>Checkbox</type>
</CustomField>