objects/Purchase_Order__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially Invoiced</fullName>
            </value>
            <value>
                <fullName>Fully Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>