objects/Purchase_Order__c/fields/Is_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Is_Temporary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temporary</label>
    <type>Checkbox</type>
</CustomField>