objects/Purchase_Order__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Markup</label>
    <type>Checkbox</type>
</CustomField>