objects/Purchase_Order__c/fields/My_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>My_Service_Center__c</fullName>
    <formula>IF(Text($User.Service_Center__c) = Service_Center__r.Name, true,CONTAINS($User.Manager_of_SC__c,Service_Center__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Service Center</label>
    <type>Checkbox</type>
</CustomField>