objects/Purchase_Order__c/fields/No_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Lines__c</fullName>
    <label>No. of Lines</label>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>