objects/Purchase_Order__c/fields/Order_Cost_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Cost_Incl_Tax__c</fullName>
    <label>Order Cost Incl. Tax</label>
    <summarizedField>Purchase_Line__c.Line_Cost_Incl_Tax__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>