objects/Purchase_Order__c/fields/Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount__c</fullName>
    <label>Order Discount</label>
    <summarizedField>Purchase_Line__c.Discount__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>