objects/Purchase_Order__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <label>Order Quantity</label>
    <summarizedField>Purchase_Line__c.Quantity__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>