objects/Purchase_Order__c/fields/Order_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Tax_Amount__c</fullName>
    <label>Order Tax Amount</label>
    <summarizedField>Purchase_Line__c.Tax__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>