objects/Purchase_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Approval Routing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>CapEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>