objects/Purchase_Order__c/fields/Outstanding_Qty__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Qty__c</fullName>
    <label>Outstanding Qty.</label>
    <summarizedField>Purchase_Line__c.Outstanding_Qty__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>