objects/Purchase_Order__c/fields/Pay_to_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Blocked__c</fullName>
    <formula>Pay_to_Vendor__r.Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay to Blocked</label>
    <type>Checkbox</type>
</CustomField>