objects/Purchase_Order__c/fields/Pay_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay-to Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>