objects/Purchase_Order__c/fields/Payment_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Payment_Discount_Pct__c</fullName>
    <label>Payment Discount %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>