objects/Purchase_Order__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>