objects/Purchase_Order__c/fields/Payment_Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Name__c</fullName>
    <label>Payment Term Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>