objects/Purchase_Order__c/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <formula>Payment_Term__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Code</label>
    <type>Text</type>
</CustomField>