objects/Purchase_Order__c/fields/Pending_Approval_From__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_From__c</fullName>
    <label>Pending Approval From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>