objects/Purchase_Order__c/fields/Pending_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_Step__c</fullName>
    <label>Pending Approval Step</label>
    <length>30</length>
    <type>Text</type>
</CustomField>