objects/Purchase_Order__c/fields/PO_Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Requestor_Name__c</fullName>
    <formula>PO_Requestor__r.FirstName + ' ' + PO_Requestor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Requestor Name</label>
    <type>Text</type>
</CustomField>