objects/Purchase_Order__c/fields/Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty__c</fullName>
    <label>Received Qty.</label>
    <summarizedField>Purchase_Line__c.Received_Qty__c</summarizedField>
    <summaryForeignKey>Purchase_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>