objects/Purchase_Order__c/fields/Received_Status__c.field-meta.xml
<CustomField>
    <fullName>Received_Status__c</fullName>
    <label>Received Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially Received</fullName>
            </value>
            <value>
                <fullName>Fully Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>