objects/Purchase_Order__c/fields/SC_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>SC_Field_Update__c</fullName>
    <description>Use this field for reference</description>
    <label>SC Field Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>