objects/Purchase_Order__c/fields/SC_Formula__c.field-meta.xml
<CustomField>
    <fullName>SC_Formula__c</fullName>
    <formula>Service_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Formula</label>
    <type>Text</type>
</CustomField>