objects/Purchase_Order__c/fields/Service_Center2__c.field-meta.xml
<CustomField>
    <fullName>Service_Center2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center 2</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Purchase Orders (Service Center 2)</relationshipLabel>
    <relationshipName>Purchase_Orders_SC2</relationshipName>
    <type>Lookup</type>
</CustomField>