objects/Purchase_Order__c/fields/Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Code__c</fullName>
    <formula>Service_Center__r.NAV_Service_Center_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Code</label>
    <type>Text</type>
</CustomField>