objects/Purchase_Order__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative Drop Ship Address</label>
    <referenceTo>Ship_To_Address__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>