objects/Purchase_Order__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>