objects/Purchase_Order__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>