objects/Purchase_Order__c/fields/Subsidiary_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company_Name__c</fullName>
    <formula>Subsidiary_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Company Name</label>
    <type>Text</type>
</CustomField>