objects/Purchase_Order__c/fields/Subsidiary_Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Vendor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Subsidiary_Vendor__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Buy_from_Vendor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subsidiary_Vendor__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>