objects/Purchase_Order__c/fields/Subsidiary_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Vendor_No__c</fullName>
    <formula>Subsidiary_Vendor_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Vendor No.</label>
    <type>Text</type>
</CustomField>