objects/Purchase_Order__c/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <formula>CreatedBy.IsActive = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Active</label>
    <type>Checkbox</type>
</CustomField>