objects/Purchase_Order__c/validationRules/Blocked_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_account</fullName>
    <active>true</active>
    <errorConditionFormula>Buy_from_Vendor__r.Id = '001f400000HgKfQ'  
&amp;&amp; 
 ISNEW()
&amp;&amp; 
Coupa_Id__c = NULL</errorConditionFormula>
    <errorDisplayField>Buy_from_Vendor__c</errorDisplayField>
    <errorMessage>PO's are not allowed for the selected vendor</errorMessage>
</ValidationRule>