objects/Purchase_Order__c/validationRules/NoteFieldIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NoteFieldIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Note__c) == 0</errorConditionFormula>
    <errorMessage>Note field cannot be blank!</errorMessage>
</ValidationRule>