objects/Purchase_Order__c/validationRules/PO_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Buy_from_Vendor__r.Id = '001f400000HgYPq'  
&amp;&amp; 
ISNEW()
&amp;&amp;
Coupa_Id__c = NULL</errorConditionFormula>
    <errorDisplayField>Buy_from_Vendor__c</errorDisplayField>
    <errorMessage>PO's are not allowed for the selected vendor</errorMessage>
</ValidationRule>