objects/Purchase_Order__c/listViews/All_Approved_PO.listView-meta.xml
<ListView>
    <fullName>All_Approved_PO</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Received_Status__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>_All Approved PO</label>
    <sharedTo>
        <group>Accounting</group>
        <group>All_Access_PO</group>
    </sharedTo>
</ListView>