objects/Purchase_Order__c/listViews/All_PO_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>All_PO_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Cost__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Approval_Step_Completed__c</columns>
    <columns>Approval_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>_All PO Pending Approval</label>
    <sharedTo>
        <group>All_Access_PO</group>
    </sharedTo>
</ListView>