objects/Purchase_Order__c/listViews/All_Rejected_PO.listView-meta.xml
<ListView>
    <fullName>All_Rejected_PO</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Order_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>_All Rejected PO</label>
    <sharedTo>
        <group>Accounting</group>
        <group>All_Access_PO</group>
    </sharedTo>
</ListView>