objects/Purchase_Order__c/listViews/Fully_Received_Open_POs.listView-meta.xml
<ListView>
    <fullName>Fully_Received_Open_POs</fullName>
    <columns>NAME</columns>
    <columns>Document_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Date__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Order_Quantity__c</columns>
    <columns>Received_Qty__c</columns>
    <columns>Outstanding_Qty__c</columns>
    <columns>Sync_d__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Fully Received</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Fully Received Open POs</label>
</ListView>