objects/Purchase_Order__c/listViews/Jay_ROI.listView-meta.xml
<ListView>
    <fullName>Jay_ROI</fullName>
    <columns>NAME</columns>
    <columns>PO_Requestor__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Order_Cost_Incl_Tax__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Buy_from_Vendor__c</field>
        <operation>contains</operation>
        <value>ROI</value>
    </filters>
    <label>Jay-ROI</label>
</ListView>