objects/Purchase_Order__c/listViews/My_Approved_PO.listView-meta.xml
<ListView>
    <fullName>My_Approved_PO</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Order_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>My Approved PO</label>
</ListView>