objects/Purchase_Order__c/listViews/My_Fully_Received_PO.listView-meta.xml
<ListView>
    <fullName>My_Fully_Received_PO</fullName>
    <columns>NAME</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Fully Received</value>
    </filters>
    <label>My Fully Received PO</label>
</ListView>