objects/Purchase_Order__c/listViews/My_PO_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>My_PO_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <columns>Order_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>My PO Pending Approval</label>
</ListView>